--- a/static/chatroom.css
+++ b/static/chatroom.css
@@ -54,6 +54,9 @@
 #local_vid{       
     max-height: 140px;
     object-fit: contain;
+    transform: rotateY(180deg);
+    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+    -moz-transform:rotateY(180deg);    /* Firefox */
 } 
 
 @media only screen and (max-width: 768px) {
