--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -4,8 +4,8 @@
     <!-- icon -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-    <!-- socketio -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" integrity="sha512-v8ng/uGxkge3d1IJuEo6dJP8JViyvms0cly9pnbfRxT6/31c3dRWxIiwGnMSWwZjHKOuY3EVmijs7k1jz/9bLA==" crossorigin="anonymous"></script>
+    <!-- socketio -->    
+    <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
     
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -49,7 +49,7 @@
             <div id="room_link"></div>
         </div>
     </div>
-        
+    
     <div class="container-fluid px-0 mx-0">
         <div id="video_grid" class="video-grid"></div>
 
@@ -75,8 +75,8 @@
             <div id="div_local_vid" class="col-5 col-md-4 col-lg-3 video-item ml-auto">
                 <div class="vid-wrapper">
                     <video id="local_vid" autoplay muted></video>
-                </div>
-            </div>
+                </div>   
+            </div>           
         </div>
     </div>    
 </body>
